Fix for bug #35517: 	added missing unsigned flag for result buffer 	fixed returncode in mysql_stmt_fetch for data truncation